# lucinka

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-entrypoint.sh  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
lucinka/: __main__.py  app.py  config.py  models.py  schemas.py  users.py  weight.json
lucinka/alembic/: env.py  script.py.mako
lucinka/alembic/versions/: 20251019_1254-400be3edb18f_add_is_admin.py  20251019_1336-b06f639b2bc6_add_login_stats.py  20251019_1620-131e9ff37085_add_data_table.py  20251021_0943-d5c23450bcc2_add_visits_table.py  20251023_1828-d4d4d39a7288_create_breastfeeding_endpoint.py  20251029_1244-d2df84de870e_add_photos_table.py  20251203_1127-e98b57e2dde3_add_is_pumped_column_to_breastfeeding.py  20251211_1251-9dfce275a360_add_bottle_option.py  20251211_1315-36c06aca81af_add_bottle_ml.py  20260105_0000-fix_timezone_offset.py  20260110_1200-add_activities_table.py  3db7067ff480_initial_migration.py
src/: Activities.jsx  AlarmSetter.jsx  App.jsx  BarFeeding.jsx  Breastfeeding.jsx  Form.jsx  Gallery.jsx  Header.jsx  Home.jsx  LoginPage.jsx  ParallelTimelinePlot.jsx  PolarPlot.jsx  Sport.jsx  Stats.jsx  Visits.jsx  i18n.js  main.jsx  percentiles.json  theme.jsx  user.jsx  util.js
src/backend/: app.py
src/frontend/: Home.jsx  LoginPage.jsx  index.css  main.jsx
